tests/syntax_error/union_default.jou
union Foo:
    num: int = 1  # Error: union members cannot have default values
